crates/nash-report/tests/can/snapshots/can__module__tests__let_destruct_self_reference_is_recursive.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nmain = let (a, b) = (a, 1) in b\n"
info: diagnostic
---
nash::names::recursive_let

  × Value `a` depends on itself.
   ╭─[src/Main.nash:3:13]
 2 │ 
 3 │ main = let (a, b) = (a, 1) in b
   ·             ─
   ╰────
  help:

        Break the cycle between these value definitions.
