crates/nash-report/tests/can/snapshots/can__module__tests__local_record_alias_ctor.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Point 'a = { x : 'a, y : 'a }\n\np = Point\n"
---
Module {
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "p",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 5,
                    },
                    end: Position {
                        line: 5,
                        column: 10,
                    },
                },
                value: VarConstructor {
                    options: Normal,
                    reference: ConstructorName {
                        home: ModuleName {
                            package: None,
                            name: "Main",
                        },
                        union: "Point",
                        name: "Point",
                    },
                    index: 0,
                    annotation: Annotation {
                        context: [
                            Implied {
                                trait_: QualifiedName {
                                    home: ModuleName {
                                        package: Some(
                                            PackageName {
                                                author: "nash",
                                                project: "core",
                                            },
                                        ),
                                        name: "Builtin",
                                    },
                                    name: "Big",
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                ],
                            },
                        ],
                        free_vars: [
                            "a",
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 31,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                    },
                                    value: Lambda {
                                        from: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 37,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 39,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                        to: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                            },
                                            value: Alias {
                                                reference: QualifiedName {
                                                    home: ModuleName {
                                                        package: None,
                                                        name: "Main",
                                                    },
                                                    name: "Point",
                                                },
                                                arguments: [
                                                    AliasArgument {
                                                        name: "a",
                                                        typ: Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                            },
                                                            value: Var(
                                                                "a",
                                                            ),
                                                        },
                                                    },
                                                ],
                                                remaining: [],
                                                target: Open(
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 3,
                                                                column: 23,
                                                            },
                                                            end: Position {
                                                                line: 3,
                                                                column: 41,
                                                            },
                                                        },
                                                        value: Record {
                                                            fields: [
                                                                FieldType {
                                                                    index: 0,
                                                                    field: "x",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 29,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 31,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                },
                                                                FieldType {
                                                                    index: 1,
                                                                    field: "y",
                                                                    typ: Located {
                                                                        region: Region {
                                                                            start: Position {
                                                                                line: 3,
                                                                                column: 37,
                                                                            },
                                                                            end: Position {
                                                                                line: 3,
                                                                                column: 39,
                                                                            },
                                                                        },
                                                                        value: Var(
                                                                            "a",
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    },
                                                ),
                                            },
                                        },
                                    },
                                },
                            },
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 5,
                    column: 1,
                },
            },
            value: Alias {
                kind: Arrow(
                    Type,
                    Type,
                ),
                context: [
                    Implied {
                        trait_: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "Big",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 29,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 31,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 12,
                        },
                        end: Position {
                            line: 3,
                            column: 17,
                        },
                    },
                    value: "Point",
                },
                parameters: [
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 23,
                        },
                        end: Position {
                            line: 3,
                            column: 41,
                        },
                    },
                    value: Record {
                        fields: [
                            FieldType {
                                index: 0,
                                field: "x",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 29,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 31,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                            FieldType {
                                index: 1,
                                field: "y",
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 37,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 39,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                            },
                        ],
                    },
                },
            },
        },
    ],
    binops: [],
}
