crates/nash-report/tests/can/snapshots/can__module__tests__module_shell_reports_export_open_alias.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Pair(..))\n\ntype alias Pair 'a = 'a\n"
info: diagnostic
---
nash::names::export_open_alias

  × Type alias `Pair` has no variants to expose.
   ╭─[src/Main.nash:1:28]
 1 │ module Main exposing (Pair(..))
   ·                            ──
 2 │ 
   ╰────
  help: Remove `(..)`.
